header & about section html

--- a/index.html
+++ b/index.html
@@ -5,9 +5,83 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/dist/styles/app.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,600;1,800&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300&display=swap" rel="stylesheet">
     <title>Monticello</title>
 </head>
 <body>
+    <header class="main-header block-section">
+        <div class="container">
+          <div class="header-container">
+            <a href="#" class="logo"><img src="assets/Logo.png" alt="Logo"></a>
+            <nav class="main-nav">
+                <ul>
+                    <li class="active-link"><a href="#">About us</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">News</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="social-media">
+                <a href="https://www.facebook.com" target="_blank"><img src="/assets/Facebook-Logo.svg"></a>
+                <a href="https://www.twitter.com" target="_blank"><img src="/assets/Twitter-Logo.svg"></a>
+                <a href="https://www.instagram.com" target="_blank"><img src="/assets/Insta-Logo.svg"></a>
+            </div>
+          </div>
+      </div>
+    </header>
+    <main class="main-content block-section">
+        <section class="hero-banner">
+            <div class="container">
+              <div class="hero-banner__text">
+                <div class="hero-banner__title">
+                    <h1>Simple & Modern</h1>
+                    <p class="subtitle">WE MAKE THE WORLD BEAUTIFUL EVERYDAY</p>
+                </div>
+              </div>
+              <a href=""><img src="assets/Arrow.svg" alt="down-arrow"></a>
+            </div> 
+        </section>
 
+        <section class="about-us block-section">
+            <div class="container">
+              <div class="about-us__title">
+                <h2>WHAT WE DO</h2>
+              </div>
+              <div class="flex-container">
+                <div class="about-us__img">
+                  <img src="assets/AboutUs-image1.png" alt="aboutus-image1">
+                </div>
+                <div class="about-us__content">
+                  <h4>ONE WORLD</h4>
+                  <h2>TRADE CENTER</h2>
+                  <p>Increasing prosperity in our lives can be accomplished by having the right frame of mind. The truth is, our thoughts are very powerful.</p>
+                  <div class="about-us__btn">
+                    <a href="" class="btn">MORE DETAILS</a>
+                  </div>
+                  <div class="about-us__location">
+                    <p><img src="assets/location-icon.svg">New York City, United States - 1776 feet</p>
+                  </div>
+                </div>
+              </div>
+              <div class="flex-container">
+                <div class="about-us_img">
+                  <img src="assets/AboutUs-image2.png" alt="aboutus-image2">
+                </div>
+                <div class="about-us__content">
+                  <h4>INTERNATIONAL</h4>
+                  <h2>COMMERCE CENTRE</h2>
+                  <p>Successful businesses have many things in common, today we’ll look at the big ‘R’ of recognition and how a digital advertising network may help.</p>
+                  <div class="about-us__btn">
+                    <a href="" class="btn">MORE DETAILS</a>
+                  </div>
+                  <div class="about-us__location">
+                    <p><img src="assets/location-icon.svg">Hong Kong - 1588 feet</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
 </body>
 </html>
