finished hero banner

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <a href="#" class="logo"><img src="assets/Logo.png" alt="Logo"></a>
             <nav class="main-nav">
                 <ul>
-                    <li class="active-link"><a href="#">About us</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">News</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><span class="active-link"></span><a href="#">About us</a></li>
+                    <li><span></span><a href="#">Projects</a></li>
+                    <li><span></span><a href="#">News</a></li>
+                    <li><span></span><a href="#">Contact</a></li>
                 </ul>
             </nav>
             <div class="social-media">
@@ -32,9 +32,10 @@
       </div>
     </header>
     <main class="main-content block-section">
-        <section class="hero-banner">
-            <div class="container">
-              <div class="hero-banner__text">
+        <section class="hero">
+            <div class="hero-banner">
+             <div class="hero-banner-container">
+              <div class="hero-banner-text">
                 <div class="hero-banner__title">
                     <h1>Simple & Modern</h1>
                     <p class="subtitle">WE MAKE THE WORLD BEAUTIFUL EVERYDAY</p>
@@ -42,6 +43,7 @@
               </div>
               <a href=""><img src="assets/Arrow.svg" alt="down-arrow"></a>
             </div> 
+            </div>
         </section>
 
         <section class="about-us block-section">
